...

import UIKit

class VideoSelectorViewController: UIViewController {
    
    @IBOutlet weak var TableViewList: UITableView!
    let videoNamesArray = ["Video1", "Video2", "Video3", "Video4"]
    let videoUrlListArray = ["http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4", "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4", "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/Sintel.mp4", "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/WeAreGoingOnBullrun.mp4"]
    override func viewDidLoad() {
        super.viewDidLoad()
        self.TableViewList.delegate = self
        self.TableViewList.dataSource = self
        TableViewList.register(UINib(nibName: "CustomVideoTableViewCell", bundle: nil), forCellReuseIdentifier: "VideoTitleCellIdentifier")
...
