...
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="CR3-63-F78">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bzG-aL-bNx">
                                                <rect key="frame" x="0.0" y="0.0" width="125" height="40"/>
                                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="14"/>
                                                <state key="normal" title="Back">
                                                    <color key="titleColor" name="primaryTextColor"/>
                                                </state>
                                                <connections>
                                                    <action selector="buttonTapped:" destination="eKs-pC-xrA" eventType="touchUpInside" id="t9O-2e-H4X"/>
                                                </connections>
                                            </button>
...
